Childrens-Social-Care-CPD/styles/scss/overrides/_dfe-overrides.scss
/* ... */
@media (max-width: 40.0525em) {
    .dfe-section-card__container {
        display: grid;
        width: 100;
    }
}

/* ASIDE COMPONENT - NEW
--------------------------- */
.app-related-items {
    border-top: 2px solid #347ca9;
    padding-top: 10px;
}

.app-related-items .govuk-list > li {
    margin-bottom: 10px;
}

/* OVERIDE GOV INSET TEXT STYLING - NEW
--------------------------------------- */
.govuk-inset-text {
    border-left: 10px solid #347ca9;
}

/* HOMEPAGE HERO BANNER ----------------------- */
.app-section-beta {
    padding: 40px 0 20px 0;
}

.app-section-beta__blue {
    background-color: #347ca9;
}

.body-header-font {
    color: white;
}

h1.body-header-font {
    margin-bottom: 0;
}

/* DFE HEADER - CODE FROM DFE DESIGN GUIDE AND WITH EDITS --------------------------------------------------------- */
.govuk-header {
    background-color: #003a69;
}

h1,
.dfe-heading-xl, .govuk-heading-xl {
  margin-bottom: 10px
}

.govuk-header__container {
    position: relative;
    margin-bottom: -10px;
    padding-top: 25px;
    padding-bottom: 15px;
    border-bottom: 10px solid #347ca9;
}

.govuk-header__product-name, .govuk-header__logotype-text {
    line-height: 2.5rem !important;
    font-size: 1.2rem;
}

.app-header .govuk-header__logo {
    width: 85%;
}

.app-header .govuk-header__content {
    width: 0;
}

.govuk-header__logotype-crown-fallback-image {
    height: 45px;
    width: 45px;
}

.govuk-header__logotype-text::after {
    content: "|";
}

.govuk-header__logotype {
    margin-right: 0;
}

.govuk-header__navigation-item--active a:link, .govuk-header__navigation-item--active a:hover, .govuk-header__navigation-item--active a:visited {
    color: #f3f2f1;
    text-decoration: underline;
    text-decoration-thickness: 3px;
    text-underline-offset: 0.1em;
}

@media (max-width: 40.0625em) {
    .govuk-header__product-name {
        max-width: 80%;
        line-height: 1.2rem !important;
        font-size: 1rem;
    }

    .govuk-header__logotype-text {
        min-width: 100%;
        line-height: 2.2rem !important;
        font-size: 1rem;
    }
}


/* ==========================================================================
DFE banner
========================================================================== */
/* Banner Container */
.dfe-o-banner {
    display: flex;
    width: 100%;
    min-height: 10rem;
    margin: 0 auto;
}

/* Banner Content Container */
.dfe-o-banner__content-container {
    width: 50%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background: #ebf2f6;
}

/* Banner Image Container */
.dfe-o-banner__image-container {
    width: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
}

/* Image Styles */
.dfe-o-banner__image-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

/* Mirrored Banner */
.dfe-o-banner--mirrored {
    flex-direction: row-reverse;
}

/* Banner Text Clamping */
.dfe-o-banner [class^=dfe-t-body],
.dfe-o-banner [class^=dfe-t-heading] {
    display: -webkit-box;
    overflow: hidden;
    text-overflow: ellipsis;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    -webkit-box-pack: end;
}

.dfe-o-banner [class^=dfe-t-body] {
    -webkit-line-clamp: 5;
}

/* Media Query for Mobile */
@media (max-width: 63.99em) {
    .dfe-o-banner {
        width: 100%;
        flex-direction: column-reverse;
    }

    .dfe-o-banner__content-container, .dfe-o-banner__image-container {
        width: 100%;
    }

    .dfe-o-banner .dfe-a-image {
        overflow: hidden;
    }

    .dfe-o-banner .dfe-a-image img {
        position: relative;
    }
}

.dfe-o-banner__inner-content-container {
    width: 80%;
    padding: 3rem;
}

/* ==========================================================================
CONTENT TITLE BANNER
========================================================================== */
.app-section-content--blue {
    background-color: #ebf2f6;
}

.app-section-content {
    padding-bottom: 35px;
}

p#content-banner-subtitle.govuk-body-l {
    margin-bottom: 0px;
}

/* Document list */
.dfeuk-document-list {
    padding: 0;
}

.dfeuk-document-list .dfeuk-document-list__item {
    margin-bottom: 25px;
    padding-top: 10px;
    border-top: 1px solid #b1b4b6;
    list-style: none;
}

.dfeuk-document-list .dfeuk-document-list__item .dfeuk-document-list--no-underline {
    font-size: 16px;
    font-size: 1rem;
    line-height: 1.25;
}

@media (min-width: 40.0625em) {
    .dfeuk-document-list .dfeuk-document-list__item .dfeuk-document-list--no-underline {
        font-size: 19px;
        font-size: 1.1875rem;
        line-height: 1.3157894737;
    }
}

@media print {
    .dfeuk-document-list .dfeuk-document-list__item .dfeuk-document-list--no-underline {
        font-size: 14pt;
        line-height: 1.15;
    }
}

.dfeuk-document-list .dfeuk-document-list__item .dfeuk-document-list__item-title {
    text-decoration: none !important;
    font-weight: 700;
}

.dfeuk-document-list .dfeuk-document-list__item .dfeuk-document-list__item-description {
    font-size: 14px;
    font-size: 0.875rem;
    line-height: 1.1428571429;
    margin: 5px 0;
}

@media (min-width: 40.0625em) {
    .dfeuk-document-list .dfeuk-document-list__item .dfeuk-document-list__item-description {
        font-size: 16px;
        font-size: 1rem;
        line-height: 1.25;
    }
}

@media print {
    .dfeuk-document-list .dfeuk-document-list__item .dfeuk-document-list__item-description {
        font-size: 14pt;
        line-height: 1.2;
    }
}

.dfeuk-document-list .dfeuk-document-list__item .dfeuk-document-list__item-metadata {
    padding: 0;
}
/* ... */

